src/web/snapshots/rustlog__web__tests__user_random.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/11111/userid/22222/random
status: 200 OK
content-type: text/plain; charset=utf-8
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
<body omitted>
